правки по БД, миграции+ ликвибейз+ пролонг+ изменение типа дат на дату с временем